ecmascript/parser/tests/test262-error-references/fail/338848861369f3b7.js.stderr
error: TS1014
 --> $DIR/tests/test262-parser/fail/338848861369f3b7.js:1:11
  |
1 | (function(...a, b){})
  |           ^^^

